src/qpoint.h

  /* Quaternion */
  typedef double quat_t[4];
  
  /* parameter structure for storing corrections computed at variable rates */
  typedef struct qp_memory_t {
    int initialized;
    
    // update state
    qp_state_t state_daber;     // diurnal aberration
    qp_state_t state_lonlat;    // lat/lon
    qp_state_t state_wobble;    // polar motion
    qp_state_t state_dut1;      // ut1 correction
    qp_state_t state_erot;      // earth's rotation
    qp_state_t state_npb;       // nutation, precession, frame bias    
    qp_state_t state_aaber;     // annual aberration
    qp_state_t state_ref;       // refraction
    
    // state data
    qp_weather_t weather;     // weather
    double ref_tol;           // refraction tolerance, rad
    double ref_delta;         // refraction correction, deg
    double dut1;              // UT1 correction
    quat_t q_lonlat;          // lonlat quaternion
    quat_t q_wobble;          // wobble quaternion
    quat_t q_npb;             // nutation etc quaternion
    quat_t q_erot;            // earth's rotation quaternion
    vec3_t beta_earth;        // earth velocity
    qp_bulletina_t bulletinA; // bulletin A data
    
    // options
    int accuracy;          // 0=full accuracy, 1=low accuracy
    int mean_aber;         // 0=per-detector aberration, 1=mean
    int fast_math;         // 0=regular trig, 1=polynomial trig approximations
    int polconv;           // polarization convention (0=healpix,1=IAU)
    int pair_dets;         // pair A/B detectors for bore2map (1=True, 0=False)
    int pix_order;         // pixel ordering (1=nest, 0=ring)
    int num_threads;       // number of parallel threads
  } qp_memory_t;
  /* Return interpolated values from IERS Bulletin A */
  int get_iers_bulletin_a( qp_memory_t *mem, double mjd,
			   double *dut1, double *x, double *y );
  /* Set IERS Bulletin A */
  int set_iers_bulletin_a( qp_memory_t *mem, int mjd_min_, int mjd_max_,
			   double *dut1, double *x, double *y );
  
  /* Calculate atmospheric refraction */
  double qp_refraction(double el, double lat, double height, double temp,
		       double press, double hum, double freq, double lapse,
		       double tol);
  
  /* Update atmospheric refraction using stored parameters */
  double qp_update_ref(qp_memory_t *mem, double el, double lat);
  
  /* ************************************************************************* 
     Pixelization
     ********************************************************************** */
  
  /* Pixel, contains (hits, p01, p02, p11, p12, p22) */
  typedef double pixel_t[6];
  
  /* Compute pointing matrix map for given boresight timestream and many detector
     offsets. pmap is a npix-x-6 array containing (hits, p01, p02, p11, p12, p22) */
  void qp_bore2map_hwp(qp_memory_t *mem, quat_t *q_off, int ndet,
		       double *ctime, quat_t *q_bore, quat_t *q_hwp, int n,
		       pixel_t *pmap, int nside);